// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extracts docs 1`] = `
Array [
  Object {
    "jsDoc": null,
    "kind": "variable",
    "name": "a",
    "printed": "a = 1",
    "sourceLocation": Object {
      "fileLine": 1,
      "filePath": "/test.ts",
    },
    "type": Object {
      "name": "1",
    },
  },
]
`;

exports[`jsdoc extracts doc from a variable statement 1`] = `
Object {
  "source": "/**
 * primary
 */",
}
`;

exports[`jsdoc splits multiple jsDoc blocks by primary and additional (closest to code is primary) 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "/**
 * additional 2
 */",
    },
    Object {
      "source": "/**
 * additional 1
 */",
    },
  ],
  "primary": Object {
    "source": "/**
 * primary
 */",
  },
}
`;

exports[`jsdoc whitespace and comments between multiple jsDoc blocks are ignored 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "/**
 * additional 2
 */",
    },
    Object {
      "source": "/**
 * additional 1
 */",
    },
  ],
  "primary": Object {
    "source": "/**
 * primary
 */",
  },
}
`;
